# my-win32

./: CMakeLists.txt  hellowin.cpp  main.cpp
